# minilibc

./: .gitignore  COPYRIGHT  Makefile.am  README.md  autogen.sh  configure.ac
arch/: Makefile.am
arch/arm/: _start.h
arch/arm/include/: Makefile.am
arch/arm/include/bits/: setjmp.h  syscall.h
arch/arm/src/crt/: crti.s  crtn.s
arch/arm/src/unistd/: syscall.S
arch/generic/: Makefile.am
arch/generic/include/: Makefile.am
arch/generic/src/crt/: crt1.c  crti.s
arch/generic/src/stdlib/: syscall.c
arch/generic/src/unistd/: syscall.c  syscall.s
arch/i386/: Makefile.am  _start.h
arch/i386/include/: Makefile.am
arch/i386/include/bits/: setjmp.h  syscall.h
arch/i386/src/crt/: crti.s
arch/i386/src/setjmp/: longjmp.S  setjmp.S
arch/i386/src/string/: memcpy.s  memmove.s  memset.s
arch/i386/src/unistd/: syscall.s
arch/x32/: _start.h
arch/x32/include/: _start.h  bits
arch/x32/src/crt/: crti.s
arch/x32/src/stdlib/: syscall.s
arch/x32/src/unistd/: syscall.s
arch/x86/: _start.h
arch/x86/include/: _start.h
arch/x86/include/bits/: setjmp.h  syscall.h  syscall_32.h  syscall_64.h  syscall_x32.h
arch/x86/real-mode/include/: _start.h
arch/x86/real-mode/include/bits/: syscall_32.h
arch/x86/real-mode/src/: crt
arch/x86/real-mode/src/stdlib/: syscall.c
arch/x86/src/crt/: crt1.s  crti.s  crtn.s
arch/x86/src/crt/64/: crt1.s
arch/x86/src/stdlib/: syscall.s
arch/x86/src/unistd/: syscall.s
arch/x86_64/: _start.h
arch/x86_64/include/: Makefile.am  _start.h  bits
arch/x86_64/include/bits/: setjmp.h  syscall.h  syscall_32.h  syscall_64.h  syscall_x32.h
arch/x86_64/src/: crt
arch/x86_64/src/crt/: crti.s
arch/x86_64/src/setjmp/: longjmp.S  setjmp.S
arch/x86_64/src/stdlib/: syscall.s
arch/x86_64/src/string/: memchr.S  memcmp.S  memcpy.S  memcpy.s  memmove.S  memmove.s  memrchr.S  memset.S  memset.s
arch/x86_64/src/unistd/: syscall.s
docs/: arrays_and_pointers.txt  environment.txt
include/: Makefile.am  alloca.h  assert.h  ctype.h  elf.h  errno.h  fcntl.h  features.h  float.h  iso646.h  limits.h  locale.h  math.h  pthread.h  setjmp.h  signal.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  stdnoreturn.h  string.h  strings.h  syscall.h  tar.h  test-varargs.c  time.h  unistd.h  varargs.h
include/bits/: alldefs.h  defs.h  errno.h  fcntl.h  float.h  limits.h  signal.h  syscall.h  unistd.h  whence.h
include/sys/: cdefs.h  mman.h  resource.h  socket.h  stat.h  syscall.h  time.h  types.h  wait.h
m4/: .gitignore  check_cflag.m4
src/: Makefile.am  _init_fini.c  _start.c  exit.c  test-getenv.c
src/assert/: assert.c
src/crt/: Scrt1.c  crt1.c
src/crt/generic/: crt1.c
src/crt/i386/: crt1.s
src/crt/x86_64/: crt1.s
src/ctype/: isalnum.c  isalpha.c  isascii.c  isblank.c  iscntrl.c  isdigit.c  isgraph.c  islower.c  isprint.c  ispunct.c  isspace.c  isupper.c  isxdigit.c  toascii.c  tolower.c  toupper.c
src/ctype/tests/: test.c
src/env/: __auxv.c  __environ.c  __hwcap.c  __libc_start_main.c  __main.c  __sysinfo.c  environ.c  errno.c  libc_start_main.c
src/errno/: errno.c  progname.c  program_invocation_name.c  sys_errlist.c  sys_nerr.c
src/fcntl/: open.c  openat.c
src/float/: float.h  float_parts.h
src/generic/: crti.c
src/i386/: _start.s  crti.s
src/include/: errno.h  fcntl.h  libc-deps.h  signal.h  stdio.h  string.h  time.h  unistd.h
src/include/sys/: mman.h  stat.h  wait.h
src/internal/: atexit.h  hot.h  int-format.c  printf-helpers.c  syscall_macros.h  syscall_ret.c  weak.h
src/libtcc/: libtcc1.c
src/malloc/: allocation.c  allocinfo.c  calloc.c  chunk.c  free.c  free_chunk.c  get_chunk.c  mallchunk.c  malloc.c  malloc.h  metadata.c  realloc.c
src/math/: sqrt.c  sqrtf.c
src/math/extended-ieee-754/: fabs.c
src/math/ieee-754/: decompose_generic.h  fabs.c  fmod.c  nan.c  sqrt.c
src/math/ieee-754/dbl-64/: decompose.h  fmod.c  nan.c
src/math/ieee-754/flt-32/: decompose.h  fabsf.c  sqrtf.c
src/mman/: mmap.c  mprotect.c  munmap.c
src/setjmp/: setjmp.c
src/signal/: kill.c  raise.c
src/stat/: getumask.c  umask.c
src/stdarg/: va_arg.c
src/stdio/: clearerr.c  fclose.c  feof.c  ferror.c  fflush.c  fgetc.c  fgets.c  fileno.c  fopen.c  fprintf.c  fputc.c  fputs.c  fread.c  fseek.c  ftell.c  fwrite.c  getc.c  getchar.c  gets.c  perror.c  printf.c  putchar.c  puts.c  rewind.c  setbuf.c  setbuffer.c  setlinebuf.c  setvbuf.c  snprintf.c  sprintf.c  stdio.c  ungetc.c  vfprintf.c  vprintf.c  vsnprintf.c  vsprintf.c  write.c
src/stdlib/: __libc_start_main.c  _exit.c  abort.c  abs.c  alloc.c  atexit.c  ato.c  atoi.c  brk.c  bsearch.c  calloc.c  div.c  exit.c  free.c  getenv.c  labs.c  ldiv.c  llabs.c  lldiv.c  malloc.c  mmap.c  qsort.c  quick_exit.c  rand.c  sbrk.c  strtod.c  strtoll.c  toa.c
src/stdlib/generic/: syscall.c
src/string/: ffs.c  ffsl.c  ffsll.c  memchr.c  memcmp.c  memcpy.c  memmem.c  memmove.c  memrchr.c  memset.c  rawmemchr.c  stpcpy.c  strcasecmp.c  strcat.c  strchr.c  strchrnul.c  strcmp.c  strcoll.c  strcpy.c  strcspn.c  strdup.c  strerror.c  strerror.h  strlen.c  strlwr.c  strncasecmp.c  strncat.c  strncmp.c  strncpy.c  strndup.c  strnlen.c  strrchr.c  strrev.c  strspn.c  strstr.c  strto.c  strtok.c  strtok_r.c  strupr.c  strxfrm.c  (+1 more)
src/time/: nanosleep.c  time.c
src/unistd/: _exit.c  brk.c  close.c  environ.c  fork.c  fsync.c  getpid.c  lseek.c  open.c  read.c  sbrk.c  sleep.c  syscall.c  unlink.c  unlinkat.c  usleep.c  write.c
src/wait/: wait.c  wait3.c  wait4.c  waitpid.c
tests/: alloc.c  atexit_test.c  env.c  main.c  start.c  string-compare.c  test-alloc.c  test-atoi.c  varargs.c
tests/string/: t000.c
tools/: Makefile.am  gen-x86-syscalls.sh  gen-x86_64-syscalls.sh  mini-gcc  mini-gcc.in  mini-gcc.specs.in  strerror.sh  sys_errlist.sh  syscall_32.h  syscall_64.h
tools/linux/: gen-x32-syscalls.sh  gen-x86-syscalls.sh  gen-x86_64-syscalls.sh
tools/linux/arm/: gen-arm-syscalls.sh
tools/linux/x32/: gen-x32-syscalls.sh
tools/linux/x86/: gen-x86-syscalls.sh
