nobase_include_HEADERS = \
	alloca.h \
	assert.h \
	bits/defs.h \
	bits/errno.h \
	bits/fcntl.h \
	bits/float.h \
	bits/limits.h \
	bits/signal.h \
	bits/whence.h \
	ctype.h \
	elf.h \
	errno.h \
	fcntl.h \
	features.h \
	float.h \
	iso646.h \
	limits.h \
	locale.h \
	math.h \
	pthread.h \
	setjmp.h \
	signal.h \
	stdarg.h \
	stdbool.h \
	stddef.h \
	stdint.h \
	stdio.h \
	stdlib.h \
	stdnoreturn.h \
	string.h \
	strings.h \
	syscall.h \
	sys/cdefs.h \
	sys/mman.h \
	sys/resource.h \
	sys/socket.h \
	sys/stat.h \
	sys/syscall.h \
	sys/time.h \
	sys/types.h \
	sys/wait.h \
	tar.h \
	time.h \
	unistd.h \
	varargs.h
